--- a/contact me.html
+++ b/contact me.html
@@ -21,7 +21,7 @@
       <input type="email" name="" value=""> <br>
       <label>Your Message:</label> <br>
       <textarea name="email" rows="10" cols="30"></textarea>
-      <input type="submit" name="submit" value="">
+      <input type="submit" name="" value="submit">
     </form>
   </head>
   <body>
